--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,10 +1,13 @@
 body{
-    background-color: lightskyblue;
+    background-color: rgb(0, 0, 0);
 }
 .col{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 .container{
     margin-top:20px;
     border-radius: 15px;
+}
+.nav-link{
+    color: rgb(255, 255, 255);
 }
