--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -2,12 +2,15 @@ body{
     background-color: rgb(0, 0, 0);
 }
 .col{
-    background-color: rgb(0, 38, 255);
+    background-color: rgb(94, 118, 252);
 }
 .container{
     margin-top:20px;
     border-radius: 15px;
 }
 .nav-link{
+    color: rgb(94, 118, 252);
+}
+h2{
     color: rgb(0, 38, 255);
 }
